[package]
name = "token-cell"
version = "1.4.0"
edition = "2018"
authors = ["Pierre Avital <pierre.avital@me.com>"]
description = "A more convenient GhostCell"
readme = "README.md"
license = "EPL-2.0"
repository = "https://github.com/p-avital/token-cell-rs"
keywords = ["aliasing", "borrowing", "ghostcell"]
categories = ["memory-management", "no-std"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no_std = []
debug = []
default = ["debug"]
[dependencies]
paste = "1.0"
[dev-dependencies]
ghost-cell = "0.2"
